--- a/Sign Up Form.html
+++ b/Sign Up Form.html
@@ -16,7 +16,7 @@
     <div class="content">
       <div class="content_left">
         <div class="logo">
-          <img src="/odin-lined.png" alt="logo" class="icon">
+          <img src="/rss-4-512.png" alt="logo" class="icon">
           <h1 class="simplicity">#Simplicity</h1>
         </div>
       </div>
