added password validation + error prompt css

--- a/Sign Up Form.html
+++ b/Sign Up Form.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />
+    <script src="js.js" defer></script>
     <link rel="stylesheet" href="style.css" />
 
     <title>Sign-Up</title>
@@ -16,8 +17,8 @@
     <div class="content">
       <div class="content_left">
         <div class="logo">
-          <img src="/rss-4-512.png" alt="logo" class="icon">
-          <h1 class="simplicity">#Simplicity</h1>
+          <img src="/img/rss-4-512.png" alt="logo" class="icon">
+          <h1 class="simplicity">@Simplicity</h1>
         </div>
       </div>
 
@@ -33,7 +34,7 @@
         </div>
         <div class="form_wrap">
           <p class="form_title">Let's do this!</p>
-          <form action="" method="get" class="form">
+          <form action="" method="get" id="form">
             <div class="input">
               <label for="first_name">FIRST NAME</label>
               <input type="text" name="first_name" id="first_name" required/>
@@ -44,7 +45,7 @@
             </div>
             <div class="input">
               <label for="email">EMAIL</label>
-              <input type="email" name="email" id="email" />
+              <input type="email" name="email" id="email" required/>
             </div>
             <div class="input">
               <label for="phone_number">PHONE NUMBER</label>
@@ -52,14 +53,16 @@
             </div>
             <div class="input">
               <label for="password">PASSWORD</label>
-              <input type="password" name="password" id="password" required/>
+              <input type="password" name="password" id="password1" pattern=".{8,}" title="Password must be 8 characters or longer" required/>
             </div>
             <div class="input">
               <label for="password2">CONFIRM PASSWORD</label>
               <input type="password" name="password2" id="password2" required/>
             </div>
           </div>
-          <button class="submit_btn">Create Account</button>
+          <div class="message"><p id="message"></p></div>
+          <button id="submit_btn">Create Account</button>
+
           </form>
         <p class="bottom_text">
           Already have an account? <a href="#">Log in</a>
