error message updated and bottom text font change

--- a/Sign Up Form.html
+++ b/Sign Up Form.html
@@ -24,10 +24,9 @@
 
       <div class="content_right">
         <div class="top_text">
-          <p>This is not a real online service! Lorem ipsum, dolor sit amet.</p>
+          <p>This is not a real online service!             Check this awesome client-side form validation!</p>
           <p>
-            consectetur adipisicing elit. Quod nostrum fugiat unde, laboriosam
-            aliquam error.
+            
           </p>
           <p>Sign up <em>now</em> to get started.</p>
           <p>You know you want to.</p>
