media query updated

--- a/Sign Up Form.html
+++ b/Sign Up Form.html
@@ -60,12 +60,15 @@
             </div>
           </div>
           <div class="message"><p id="message"></p></div>
+          <div class="btn_div">
           <button id="submit_btn">Create Account</button>
-
+        </div>
           </form>
+        <div class="txt_div">
         <p class="bottom_text">
           Already have an account? <a href="#">Log in</a>
         </p>
+      </div>
       </div>
     </div>
   </body>
