images and image path edited

--- a/Sign Up Form.html
+++ b/Sign Up Form.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="content">
-      <div class="content_left">
+      <div class="content_left" style="background-image: url(/img/image1.jpg)">
         <div class="logo">
           <img src="/img/rss-4-512.png" alt="logo" class="icon">
           <h1 class="simplicity">@Simplicity</h1>
@@ -24,7 +24,7 @@
 
       <div class="content_right">
         <div class="top_text">
-          <p>This is not a real online service! Check this awesome client-side form validation!</p>
+          <p>This is not a real online service! This page uses javascript for client-side form validation!</p>
           <p>
             
           </p>
@@ -48,7 +48,7 @@
             </div>
             <div class="input">
               <label for="phone_number">PHONE NUMBER</label>
-              <input type="tel" name="phone_number" id="phone_number" required/>
+              <input type="tel" name="phone_number" id="phone_number"/>
             </div>
             <div class="input">
               <label for="password">PASSWORD</label>
