--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />
-    <script src="js.js" defer></script>
+    <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css" />
 
     <title>Sign-Up</title>
