--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <div class="content">
-      <div class="content_left" style="background-image: url(/img/image1.jpg)">
+      <div class="content_left" style="background-image: url(img/image1.jpg)">
         <div class="logo">
-          <img src="/img/rss-4-512.png" alt="logo" class="icon">
+          <img src="img/rss-4-512.png" alt="logo" class="icon">
           <h1 class="simplicity">@Simplicity</h1>
         </div>
       </div>
