--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="content">
-      <div class="content_left" style="background-image: url(img/image1.jpg)">
+      <div class="content_left">
         <div class="logo">
           <img src="img/rss-4-512.png" alt="logo" class="icon">
           <h1 class="simplicity">@Simplicity</h1>
