--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Font Awesome -------------------------------------- -->
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
